<resources>
    <string name="app_name">Alerta Aedes</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="register">Cadastro</string>
    <string name="name">Nome</string>
    <string name="title_activity_home_map">Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">submit</string>

    <string-array name="type_of_case">
        <item>Selecione um tipo de caso</item>
        <item>Dengue</item>
        <item>Chikungunya</item>
        <item>Zica</item>
    </string-array>
</resources>